--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath 'org.jacoco:org.jacoco.core:0.8.4'
         
 
         // NOTE: Do not place your application dependencies here; they belong
