--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
 
+
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
+
+    implementation 'com.google.android.material:material:1.1.0'
+
 }
 
 tasks.withType(Test) {
