onClick for Save Changes button does not work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
 
 
         <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".EventEditActivity"></activity>
         
          <activity
             android:name=".MainActivity"
@@ -37,7 +38,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EventEditActivity" />
 
 
 
