change class names

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity android:name=".EventEditActivity"></activity>
         
          <activity
-            android:name=".MainActivity"
+            android:name=".map.MapActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
