--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
 
         <activity android:name=".SignUpActivity" />
 
-        <activity
-            android:name=".EventPageActivity"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"></activity>
+        <activity android:name=".EventPageActivity"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        </activity>
 
         <activity
             android:name=".EventPageDetailsActivity"
@@ -33,6 +33,11 @@
 
         <activity
             android:name=".frontPage.FrontPageActivity"
+
+        <activity android:name=".ScheduleActivity" />
+        
+         <activity
+            android:name=".MainActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
