--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,25 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".ResetPasswordActivity"></activity>
         <activity android:name=".SignUpActivity" />
-
         <activity
             android:name=".EventPageActivity"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"></activity>
-
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
             android:name=".EventPageDetailsActivity"
             android:parentActivityName=".EventPageActivity" />
-
         <activity
             android:name="com.google.firebase.auth.internal.FederatedSignInActivity"
             android:launchMode="standard"
             tools:replace="android:launchMode" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".EventEditActivity" />
-
-
         <activity
             android:name=".frontPage.FrontPageActivity"
             android:label="@string/title_activity_main">
@@ -38,21 +33,25 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-             <intent-filter>
-                 <action android:name="android.intent.action.VIEW"/>
-                 <category android:name="android.intent.category.DEFAULT"/>
-                 <category android:name="android.intent.category.BROWSABLE"/>
-                 <data android:host="example.com" android:scheme="https"/>
-                 <data android:host="example.com" android:scheme="http"/>
-             </intent-filter>
-        </activity>
-        <activity android:name=".OrganizerInviteActivity"/>
-        <activity android:name=".DlinkActivity"></activity>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="example.com"
+                    android:scheme="https" />
+                <data
+                    android:host="example.com"
+                    android:scheme="http" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".OrganizerInviteActivity" />
+        <activity android:name=".DlinkActivity" />
         <activity
             android:name=".map.MapActivity"
-            android:label="@string/title_activity_main">
-        </activity>
+            android:label="@string/title_activity_main"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
