--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 script:
+  - ./gradlew clean
+  - ./gradlew assemble
   - ./gradlew build connectedCheck jacocoTestReport
 after_script:
   # Report test coverage to Code Climate
