--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ android:
     # The SDK version used to compile your project
     - android-29
     # The SDK version used by the system image
-    - android-28
+    - android-22
     # The system image, to run an emulator during the tests
-    - sys-img-arm64-v8a-android-28
+    - sys-img-armeabi-v7a-android-22
 before_script:
   # Emulator Management: Create, Start and Wait
-  - echo no | android create avd --force -n test -t android-28 --abi arm64-v8a
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82
