--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ android:
     # The SDK version used by the system image
     - android-25
     # The system image, to run an emulator during the tests
-    - sys-img-armeabi-v7a-android-25
+    - sys-img-armeabi-v7a-addon-google_apis-google-25
 before_install:
   - yes | sdkmanager "platforms;android-25"
 before_script:
   # Emulator Management: Create, Start and Wait
-  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82
