--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,12 @@ android:
     # The SDK version used to compile your project
     - android-29
     # The SDK version used by the system image
-    - android-25
+    - android-22
     # The system image, to run an emulator during the tests
-    - sys-img-armeabi-v7a-addon-google_apis-google-25
-before_install:
-  - yes | sdkmanager "platforms;android-25"
+    - sys-img-armeabi-v7a-android-22
 before_script:
   # Emulator Management: Create, Start and Wait
-  - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82
