--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
     //androidTestUtil 'androidx.test:orchestrator:1.2.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
