--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResetPasswordActivity"></activity>
-        <activity android:name=".SignUpActivity" />
-        <activity
-            android:name=".EventPageActivity"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+        <activity android:name=".authentification.ResetPasswordActivity"></activity>
+        <activity android:name=".authentification.SignUpActivity" />
         <activity
             android:name=".EventPageDetailsActivity"
             android:parentActivityName=".EventPageActivity" />
@@ -28,9 +25,9 @@
             android:name="com.google.firebase.auth.internal.FederatedSignInActivity"
             android:launchMode="standard"
             tools:replace="android:launchMode" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".authentification.LoginActivity" />
         <activity android:name=".EventEditActivity" />
-        <activity android:name=".ScheduleActivity" />
+        <activity android:name=".schedulePage.ScheduleActivity" />
 
         <activity
             android:name=".frontPage.FrontPageActivity"
@@ -55,7 +52,7 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name=".OrganizerInviteActivity" />
+        <activity android:name=".organizerInvite.OrganizerInviteActivity" />
         <activity
             android:name=".map.MapActivity"
             android:label="@string/title_activity_main"></activity>
