--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+install: travis_wait 30 mvn install
 android:
   components:
     # The BuildTools version used by your project (make sure it's exactly the same as in the build.gradle)
