--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-install: travis_wait 30 mvn install
+install: travis_wait 30
 script:
   - ./gradlew build connectedCheck jacocoTestReport
 after_script:
