travis_wait in script instead of install

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,8 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-install: travis_wait 30
 script:
-  - ./gradlew build connectedCheck jacocoTestReport
+  - travis_wait 30 ./gradlew build connectedCheck jacocoTestReport
 after_script:
   # Report test coverage to Code Climate
   - export JACOCO_SOURCE_PATH=app/src/main/java/
