--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82
 
-  # This should be in the `before_script` entry
+  # This should be in the `before_script` entryy
   # Set up Code Climate test reporter
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
