--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.firebase:firebase-firestore:21.4.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
 
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.maps.android:android-maps-utils:1.0.0'
