--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,30 @@
 language: android
 android:
   components:
-    # The BuildTools version used by your project (make sure it's exactly the same as in the build.gradle)
+    #- tools
+    #- tools # Running this twice get's the latest build tools (https://github.com/codepath/android_guides/wiki/Setting-up-Travis-CI)
+    #- platform-tools
+    #- extra
+    # BuildTools version
     - build-tools-29.0.3
     # The SDK version used to compile your project
     - android-29
     # The SDK version used by the system image
     - android-24
-    # The system image, to run an emulator during the tests
+    # Emulator image
     - sys-img-armeabi-v7a-android-24
 before_script:
   # Emulator Management: Create, Start and Wait
-  - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
+  - echo no | android create avd -f -n test -t android-24 --abi armeabi-v7a
+  - emulator -avd test -no-window &
   - android-wait-for-emulator
-  - adb shell input keyevent 82
+
+  - adb shell settings put global window_animation_scale 0 &
+  - adb shell settings put global transition_animation_scale 0 &
+  - adb shell settings put global animator_duration_scale 0 &
+
+  - adb shell input keyevent 82 &
+  - adb shell input keyevent 1 &
 
   # This should be in the `before_script` entryy
   # Set up Code Climate test reporter
