--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,13 @@ android:
     # The SDK version used to compile your project
     - android-29
     # The SDK version used by the system image
-    - android-24
+    - android-26
     # Emulator image
+    - sys-img-x86-android-26
     - sys-img-armeabi-v7a-android-24
 before_script:
   # Emulator Management: Create, Start and Wait
-  - echo no | android create avd -f -n test -t android-24 --abi armeabi-v7a
+  - echo no | android create avd -f -n test -t android-26 --abi x86
   - emulator -avd test -no-window &
   - android-wait-for-emulator
 
