--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,7 +95,7 @@ jobs:
         with:
           name: unit_tests
           path: app/build/jacoco/
-      - name: Compile & Publish code coverage
+      - name: Compile & Publish Code Coverage
         uses: paambaati/codeclimate-action@v2.5.6
         env:
           CC_TEST_REPORTER_ID: "a1ff1923b1a21d1931dd37f5869568344bc02d22eb89cab785be5b1f851466ed"
