--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,8 +102,9 @@ task jacocoTestReport(type: JacocoReport){//, dependsOn: ['testDebugUnitTest', '
         html.enabled = true
     }
 
+    def mockedClasses = ['**/*FirebaseInterface.*']
     def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*']
-    def debugTree = fileTree(dir: "$project.buildDir/intermediates/javac/debug/classes", excludes: fileFilter)
+    def debugTree = fileTree(dir: "$project.buildDir/intermediates/javac/debug/classes", excludes: fileFilter+mockedClasses)
     def mainSrc = "$project.projectDir/src/main/java"
 
     sourceDirectories.from = [mainSrc]
