--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -1,5 +1,5 @@
 # https://help.github.com/en/actions/automating-your-workflow-with-github-actions/workflow-syntax-for-github-actions
-name: Build
+name: Dev_Build
 on:
   push:
     branches:
