--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -7,8 +7,8 @@ on:
       - '*/*'  
       - '!master'
 jobs:
-  ANDROID_BASE_CHECKS:
-    name: Base Checks
+  DEV_BASE_CHECKS:
+    name: Dev Base Checks
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -22,8 +22,8 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle-
       - name: Perform base checks
         run: ./gradlew assembleDebug build
-  ANDROID_UNIT_TESTS:
-    name: Unit Tests
+  DEV_UNIT_TESTS:
+    name: Dev Unit Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -42,8 +42,8 @@ jobs:
         with:
           name: unit_tests
           path: app/build/jacoco/
-  ANDROID_EMULATOR_TESTS:
-    name: Emulator Tests
+  DEV_EMULATOR_TESTS:
+    name: Dev Emulator Tests
     runs-on: macOS-latest
     strategy:
       matrix:
@@ -67,10 +67,10 @@ jobs:
         with:
           name: emulator_tests
           path: app/build/outputs/code_coverage/debugAndroidTest/connected
-  CODE_COVERAGE:
-    name: Code Coverage Report
+  DEV_CODE_COVERAGE:
+    name: Dev Code Coverage Report
     runs-on: ubuntu-latest
-    needs: [ANDROID_UNIT_TESTS, ANDROID_EMULATOR_TESTS]
+    needs: [DEV_UNIT_TESTS, DEV_EMULATOR_TESTS]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
