android test options updated in gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 //    }
     testOptions {
         animationsDisabled = true
+        unitTests.returnDefaultValues = true
     }
 
     buildTypes {
