--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".authentification.LoginActivity" />
         <activity android:name=".EventEditActivity" />
         <activity android:name=".GroupPageActivity" />
+        <activity android:name=".GroupInviteActivity" />
         <activity android:name=".schedulePage.ScheduleActivity" />
         <activity
             android:name=".frontPage.FrontPageActivity"
