--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,5 @@
 ## We dont want to analyse the CC or CD of our tests themselves...
 exclude_patterns:
-- **/*Test*.*
-- **/*test*.*
-- **/android/**/*.*
+- "**/*Test*.*"
+- "**/*test*.*"
+- "**/android/**/*.*"
