--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
 
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
 
     //androidTestUtil 'androidx.test:orchestrator:1.2.0'
 
@@ -72,7 +73,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
 
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
@@ -94,7 +95,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-nop:1.7.30'
     implementation group: 'org.ehcache', name: 'jcache', version: '1.0.1'
 
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8+'
 }
 
 
