--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
 
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
 
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:<espressso-version>'
+
+
     //androidTestUtil 'androidx.test:orchestrator:1.2.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
