--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,9 +116,8 @@ task jacocoTestReport(type: JacocoReport) {
         html.enabled = true
     }
 
-    def mockedClasses = ['**/*FirebaseInterface*.*']
     def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*', '**/test/**','**/androidTest/**', ]
-    def debugTree = fileTree(dir: "$project.buildDir/intermediates/javac/debug/classes", excludes: fileFilter + mockedClasses)
+    def debugTree = fileTree(dir: "$project.buildDir/intermediates/javac/debug/classes", excludes: fileFilter)
     def mainSrc = "$project.projectDir/src/main/java"
 
     sourceDirectories.from = [mainSrc]
